<resources>
    <string name="app_name">MyResource</string>
    <string name="hello">你好</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="dialog_title">一个dialog标题</string>
    <string name="dialog_context">帽儿破，鞋儿破，身上的袈裟破~~~</string>
    <string name="btn_dialog">弹出dialog</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_one_store">one store pay</string>
    <string name="dialog_title2">另一个dialog标题</string>
    <string name="dialog_context2">我欲成仙，快乐齐天~~</string>
    <!--twiter的key-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">ayVnQYgRA08qGBfszk68i3grV</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">GGe1So5LmNCy0IN6D56fTdTm9GK6a05Ig4lM8AJm7mF8vvCWs9</string>
</resources>
