<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/dialog_title"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_context"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/dialog_context"
        android:textColor="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="13sp"
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorGray" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_gray" />

        <TextView
            android:textSize="13sp"
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btn_sure"
            android:textColor="@color/colorGray" />
    </LinearLayout>
</LinearLayout>